Fixed image spacing

--- a/myStyle.css
+++ b/myStyle.css
@@ -92,7 +92,7 @@ ul#firsttest {
 img#luigiImg {
     border:1px solid white;
     width:185px;
-    margin-left:40px;
+    margin-left:60px;
     margin-right:1.8em;
     margin-bottom:1.8em;
     float:left;
